@@ -19,6 +19,7 @@ mod_gearman_worker
 02_full
 03_exec
 04_log
+05_neb
 images
 send_gearman
 send_multi
